# FastSBE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt
.github/workflows/: cmake.yml  cmake_windows.yml
FastSBE/: .gitignore  CMakeLists.txt  EnumGen.py  FastSBE.py  FileGen.py  GroupGen.py  MessageGen.py  Metadata.py  Parser.py  VariableLengthDataGen.py
FastSBE/metadata/c++/composite/: composite_field_def.h  const_enum_field_def.h  const_numeric_field_def.h  const_string_field_def.h  constructor_def.h  enum_field_def.h  message_def.h  numeric_field_def.h  string_field_def.h
FastSBE/metadata/c++/message/: buffer_def.h  composite_field_def.h  const_enum_field_def.h  const_numeric_field_def.h  const_string_field_def.h  enum_field_def.h  group_def.h  group_def_4.h  group_qulifiyer_def.h  nested_group_def.h  nested_group_def_4.h  nested_variable_length_data_def.h  numeric_field_def.h  ostream_def_begin.h  ostream_def_end.h  ostream_enum_def.h  ostream_field_def_begin.h  ostream_group_def_begin.h  ostream_group_def_end.h  ostream_group_field_def.h  ostream_var_def_end.h  ostream_var_len_data_def_ct.h  string_field_def.h  variable_length_data_def.h
FastSBE/src/: CMakeLists.txt
FastSBE/src/benchmark/: CMakeLists.txt  sbe_tool_bench.h
FastSBE/src/benchmark/SBETool/sbetest/: GroupSizeEncoding.h
FastSBE/src/c++/: CMakeLists.txt  Enum.h  main.cpp  message.h  message_test.h
FastSBE/src/example/: CMakeLists.txt
FastSBE/src/example/decode/: .gitignore  CMakeLists.txt  log.txt
FastSBE/src/example/message_test/: CMakeLists.txt  fast_sbe_bench.h  helper.h  msg_test.cpp  perf_test.cpp  sbe_tool_bench.h
FastSBE/src/example/message_test/genSBE/: example-schema.xml
FastSBE/src/example/message_test/genSBE/sbetest/: MessageHeader.h  PartyDetails.h
FastSBE/src/python/: EnumGen.py  FastSBE.py  FileGen.py  MessageGen.py  Metadata.py  Parser.py  gen.py
FastSBE/src/python/c++/: message_def.h  numeric_field_def.h
FastSBE/src/python/metadata/: enum_field_def.h  numeric_field_def.h  string_field_def.h
FastSBE/src/python/metadata/c++/composite/: composite_field_def.h  const_enum_field_def.h  enum_field_def.h  string_field_def.h
FastSBE/src/python/metadata/c++/message/: buffer_def.h  composite_field_def.h  const_enum_field_def.h  enum_field_def.h  group_def.h  nested_group_def.h  numeric_field_def.h  ostream_def_end.h  ostream_field_def.h  ostream_group_def_begin.h  ostream_group_def_end.h  ostream_group_field_def.h  ostream_var_def_end.h  string_field_def.h
FastSBE/src/python/metadata/composite/: const_enum_field_def.h  const_string_field_def.h  numeric_field_def.h
FastSBE/src/python/metadata/message/: const_string_field_def.h  enum_field_def.h  message_def.h
benchmark/: CMakeLists.txt  benchmark.bat  fast_sbe_bench.h  helper.h  msg_test.cpp  perf_test.cpp  sbe_tool_bench.h
benchmark/SBETool/: gen.bat
benchmark/SBETool/sbetest/: NewOrder.h
test/benchmark/: CMakeLists.txt  benchmark_test.cpp  fastsbe_benchmark.h  sbetool_benchmark.h  validation_test.cpp
test/benchmark/FastSbe/fastsbe/: DATA.h  NewOrderSingle.h  PartyRoleEnum.h  businessRejectReasonEnum.h  messageHeader.h  optionalDecimalEncoding.h  ordStatusEnum.h  ordTypeEnum.h  sideEnum.h
test/benchmark/SbeTool/sbetool/: OrdStatusEnum.h  PartyIDSourceEnum.h  PartyRoleEnum.h
test/endcode_decode/sbe-v1/: README.md  example-schema.xml
test/endcode_decode/sbe-v2-0-RC3/: CMakeLists.txt  README.md  encode_decode.cpp  example-schema.xml
test/endcode_decode/sbe-v2-0-RC3/composite/: composite_enum_field.cpp  composite_numeric_field.cpp  composite_string_field.cpp
test/endcode_decode/sbe-v2-0-RC3/message/: message_enum_field.cpp  message_numeric_field.cpp  message_string_field.cpp
test/utility/: random_gen.h
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  NewOrderSingleData.h  benchmark_test.cpp  fast_sbe_bench.h  fastsbe_benchmark.h  helper.h  log.txt  msg_test.cpp  perf_test.cpp  sbe_tool_bench.h  sbetool_benchmark.h
tests/benchmark/FastSBE/fastsbe/: BusinessMessageReject.h  DATA.h  ExecutionReport.h  MONTH_YEAR.h  NewOrderSingle.h  PartyIDSourceEnum.h  PartyRoleEnum.h  businessRejectReasonEnum.h  execTypeEnum.h  groupSizeEncoding.h  messageHeader.h  optionalDecimalEncoding.h  ordStatusEnum.h  ordTypeEnum.h  qtyEncoding.h  sideEnum.h
tests/benchmark/SBETool/: gen.bat
tests/benchmark/SBETool/sbetest/: CancelReplace.h  TimeInForce.h
tests/benchmark/SbeTool/sbetool/: ExecTypeEnum.h  ExecutionReport.h  MONTH_YEAR.h  OrdTypeEnum.h
tests/benchmark2/: CMakeLists.txt  NewOrderSingleData.h  benchmark_test.cpp  example-schema-sbe-v1.xml  fastsbe_benchmark.h  log.txt  validation_test.cpp
tests/benchmark2/FastSBE/fastsbe/: ExecutionReport.h  MONTH_YEAR.h  NewOrderSingle.h  groupSizeEncoding.h  messageHeader.h  ordStatusEnum.h  ordTypeEnum.h  sideEnum.h
tests/benchmark2/SbeTool/sbetool/: BusinessMessageReject.h  BusinessRejectReasonEnum.h  DATA.h  GroupSizeEncoding.h  MessageHeader.h  NewOrderSingle.h  OptionalDecimalEncoding.h  QtyEncoding.h  SideEnum.h
tests/decode/: .gitignore  CMakeLists.txt  decode.cpp  example-schema.xml
tests/decode/sbe-v1/: CMakeLists.txt  decode_sbe_v1.cpp
tests/decode/sbe-v2/: CMakeLists.txt  decode_sbe_v2.cpp  example-schema.xml
tests/decode/sbe-v2-0-RC3/: CMakeLists.txt  decode_sbe_v2.cpp  example-schema.xml
tests/endcode_decode/: CMakeLists.txt
tests/endcode_decode/common/: enum_field.h
tests/endcode_decode/sbe-v1/: README.md
tests/endcode_decode/sbe-v2-0-RC3/: CMakeLists.txt  README.md  composite_enum_field.cpp  enum_field.cpp  example-schema.xml  numeric_field.cpp  string_field.cpp  string_field_const.cpp
tests/endcode_decode/sbe-v2-0-RC3/composite/: composite_enum_field.cpp  composite_numeric_field.cpp
tests/endcode_decode/sbe-v2-0-RC3/message/: message_enum_field.cpp  message_numeric_field.cpp  message_string_field.cpp
tests/test_1/: CMakeLists.txt  message.h  message_test.h
tests/utility/: random.h  random_gen.h
